# AutoCalib

./: .gitignore  CMakeLists.txt
DOC/: Cowa R1 全自动标定步骤.docx  R1 V1.1研发近期主要工作.docx  R1标定文档20171201.doc  axis-driver.xml  counterpoint.xml  全自动标定系统.pptx  指令.txt  标定文档.md  行李箱标定设备v1.3.md
include/: calib.h  config.h  config.h.in  cowaCalib.h  ecatmc.h  file.h  image.h
include/glog/: config.h  logging.h
lib/: Calib.lib  CowaCalib.lib  File.lib  Image.lib  ecatmc.exp  ecatmc.lib  fileFunction.lib  gui.exp  libglog.lib
src/cv/: CMakeLists.txt
src/cv/cowaCalib/: CmakeLists.txt  cowaCalib.cpp  cowaCalib.h
src/ecatmc/: CMakeLists.txt  client.cpp  ecatmc.def  fifo.hpp  serialport.cpp  serialport.h
src/gui/: CMakeLists.txt
src/gui/src/: AutoCalibWidget.cpp  AutoCalibWidget.h  CalibrationWidget.cpp  CalibrationWidget.h  DisplayView.cpp  DisplayView.h  InchingWidget.cpp  InchingWidget.h  LaserWidget.h  Laserwidget.cpp  MainWindow.cpp  MainWindow.h  MotionWidget.cpp  MotionWidget.h  NetworkWidget.cpp  NetworkWidget.h  P2PWidget.cpp  P2PWidget.h  PaneWidget.cpp  PaneWidget.h  SensorWidget.cpp  SensorWidget.h  SetupWidget.cpp  SetupWidget.h  XYZInchingWidget.cpp  XYZInchingWidget.h  XYZP2PWidget.cpp  XYZP2PWidget.h  colorspacewidget.h  main.cpp  mytitlebar.cpp  mytitlebar.h  switchbutton.cpp  switchbutton.h
src/gui/src/network/: device.cpp  device.h  motioncontroller.cpp  motioncontroller.h  network.cpp  network.h  protocol.h
src/gui/ui/: autocalibpage.ui  axis-driver.xml  calibrationpage.ui  icons.qrc  inching.ui  laserwidget.ui  mainwindow.ui  motion.ui  networkpage.ui  p2p.ui  pane.ui  qml.qrc  resources.qrc  sensor.ui  setuppage.ui  xyzinching.ui  xyzp2p.ui
src/gui/ui/images/: idx.psd
src/gui/ui/qml/: dashboard.qml  dashboard_test.qml
src/gui/ui/ui_backup/: setuppage.ui
